# lean-learning

./: README.md  lake-manifest.json  lakefile.lean
docs/: resources.md
experiment/: integer.lean
ffi/: README.md
ffi/c/: Makefile  clean.sh  main.c
ffi/lean/map_array/: lakefile.toml
ffi/map_array/: MapArray.lean  lakefile.toml
ffi/rust/: Cargo.toml
ffi/rust/lean/: Cargo.toml
ffi/rust/lean/src/: lib.rs  module.rs  runtime.rs  thread.rs
ffi/rust/lean/src/lean_types/: array.rs
ffi/rust/lean/src/runtime/: types.rs
ffi/rust/lean/tests/: make_string.rs  module_initialization_error.rs  repeated_run_in_lean_runtime_panics.rs
ffi/rust/lean_build/: Cargo.toml
ffi/rust/lean_build/src/: build.rs  elan.rs  lake.rs  lean_sys_root_module.rs  lib.rs  library_build.rs  runtime_build.rs  rust.rs  toolchain.rs
ffi/rust/lean_build/src/elan/: toolchain.rs
ffi/rust/lean_build/src/elan_fork/: README.md
ffi/rust/lean_build/src/elan_fork/elan/: config.rs  errors.rs
ffi/rust/lean_build/src/lake/: env.rs  package.rs
ffi/rust/lean_sys/: Cargo.toml  build.rs
ffi/rust/lean_sys/src/: lib.rs
ffi/rust/lean_sys/tests/: make_string_custom_allocator.rs  make_string_no_std.rs  make_string_std.rs
ffi/rust/map_array_bin/: Cargo.toml
ffi/rust/map_array_bin/src/: main.rs
ffi/rust/map_array_sys/: Cargo.toml  build.rs
ffi/rust/map_array_sys/src/: lib.rs
ffi/rust/map_array_sys/tests/: map_array_custom_allocator.rs
functional_programming_in_lean/: 03_interlude_propositions_proofs_and_indexing.lean  README.md
theorem_proving_in_lean4/: README.md
(+83 files in other folders)
