[workspace]
resolver = "3"
members = ["lean_sys", "map_array_bin", "map_array_sys"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bindgen = "0.71.1"
cc = "1.2.26"
# The latest version (`v4.1.2`) does not build, as described at
# <https://github.com/leanprover/elan/issues/168>
elan = { git = "https://github.com/leanprover/elan.git", tag = "v4.0.0" }
elan-dist = { git = "https://github.com/leanprover/elan.git", tag = "v4.0.0" }
